--- a/main.html
+++ b/main.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-</head>
-
-<body>
-	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+	<body>
+		<!-- PLease only edit this file for this asssignment. Thanks!-->
+		<h1>Hello World</h1>
+	</body>
 
 </html>
